tests/integration/text_document/snapshots/integration__text_document__completion__component_environment_simple_end.snap
---
source: tests/integration/text_document/completion.rs
assertion_line: 436
expression: "complete(r#\"\n%TEX main.tex\n%SRC \\begin{document}\n%SRC \\end{\n%CUR      ^\"#)?"
---
[
  {
    "data": "[data]",
    "detail": "built-in",
    "kind": 1,
    "label": "document",
    "preselect": true,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "document"
    }
  },
  {
    "data": "[data]",
    "detail": "built-in",
    "kind": 1,
    "label": "abstract",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "abstract"
    }
  },
  {
    "data": "[data]",
    "detail": "built-in",
    "kind": 1,
    "label": "array",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "array"
    }
  },
  {
    "data": "[data]",
    "detail": "built-in",
    "kind": 1,
    "label": "center",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "center"
    }
  },
  {
    "data": "[data]",
    "detail": "built-in",
    "kind": 1,
    "label": "csname",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "csname"
    }
  }
]
