tests/integration/text_document/snapshots/integration__text_document__completion__entry_type_after_preamble.snap
---
source: tests/integration/text_document/completion.rs
assertion_line: 528
expression: "complete(r#\"\n%BIB main.bib\n%SRC @preamble{\n%CUR          ^\n%1.1  ^^^^^^^^\"#)?"
---
[
  {
    "data": "[data]",
    "kind": 1,
    "label": "preamble",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "preamble"
    }
  }
]
