tests/integration/text_document/snapshots/integration__text_document__completion__entry_type_before_string.snap
---
source: tests/integration/text_document/completion.rs
assertion_line: 502
expression: "complete(r#\"\n%BIB main.bib\n%SRC @string\n%CUR  ^\n%1.1  ^^^^^^\"#)?"
---
[
  {
    "data": "[data]",
    "kind": 1,
    "label": "string",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "string"
    }
  }
]
