tests/integration/text_document/snapshots/integration__text_document__completion__entry_type_complete_entry.snap
---
source: tests/integration/text_document/completion.rs
assertion_line: 554
expression: "complete(r#\"\n%BIB main.bib\n%SRC @article{foo, author = {foo}}\n%CUR    ^\n%1.1  ^^^^^^^\"#)?"
---
[
  {
    "data": "[data]",
    "documentation": "[documentation]",
    "kind": 1,
    "label": "article",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "article"
    }
  }
]
