tests/integration/text_document/snapshots/integration__text_document__completion__field_entry_two_fields_name_closed.snap
---
source: tests/integration/text_document/completion.rs
assertion_line: 617
expression: "complete(r#\"\n%BIB main.bib\n%SRC @article{foo, author = bar, edit}\n%CUR                              ^\n%1.1                             ^^^^\"#)?"
---
[
  {
    "data": "[data]",
    "documentation": "[documentation]",
    "kind": 1,
    "label": "edition",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "edition"
    }
  },
  {
    "data": "[data]",
    "documentation": "[documentation]",
    "kind": 1,
    "label": "editor",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "editor"
    }
  },
  {
    "data": "[data]",
    "documentation": "[documentation]",
    "kind": 1,
    "label": "editora",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "editora"
    }
  },
  {
    "data": "[data]",
    "documentation": "[documentation]",
    "kind": 1,
    "label": "editoratype",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "editoratype"
    }
  },
  {
    "data": "[data]",
    "documentation": "[documentation]",
    "kind": 1,
    "label": "editorb",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "editorb"
    }
  }
]
